<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sf_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sf_l2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/l2_lock"
        android:textColor="@color/sf_text_color"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/sf_review"
        style="@style/sf_text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/review_mode" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sf_divider"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sf_study"
        style="@style/sf_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/study_plan" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sf_divider"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sf_unlock"
        style="@style/sf_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/unlock_style" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sf_divider"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/sf_application"
        style="@style/sf_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:text="@string/application_info" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sf_divider"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sf_more"
        style="@style/sf_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/more_setting" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sf_divider"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/sf_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/turn_on" />

        <CheckBox
            android:id="@+id/sf_switch"
            style="@style/custom_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

</LinearLayout>