<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_word"
        android:textColor="#000000"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:gravity="center"
        android:text="@string/edit_body"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />
    <EditText
        android:id="@+id/et_body"
        android:layout_below="@id/tv_body"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:hint="" />
    
    <TextView
        android:id="@+id/tv_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_body"
        android:gravity="center"
        android:text="@string/edit_mark"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />
    
    <EditText
        android:id="@+id/et_mark"
        android:layout_below="@id/tv_mark"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:hint="" />
    
    <TextView
        android:id="@+id/tv_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mark"
        android:gravity="center"
        android:text="@string/edit_mean"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />
    
    <EditText
        android:id="@+id/et_mean"
        android:layout_below="@id/tv_mean"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:hint="" />
    
    <Button
        android:id="@+id/edit_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_mean"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center" 
        android:layout_marginLeft="20dp" />
    
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/edit_finish"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/edit_cancel"
        android:text="@string/finish"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginRight="20dp" />

</RelativeLayout>
