<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/plan"
            android:textColor="#df5851"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider1" />

        <LinearLayout
            android:id="@+id/setting_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_plan"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/setting_plan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#958c8c"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider2" />

        <LinearLayout
            android:id="@+id/setting_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_remind"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/setting_review_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#958c8c"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/single_word"
            android:textColor="#df5851"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_home"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/setting_home_cb"
                style="@style/custom_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider2" />

        <LinearLayout
            android:id="@+id/setting_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_update"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/setting_update_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#958c8c"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lock_screen"
            android:textColor="#df5851"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider1" />

        <LinearLayout
            android:id="@+id/setting_unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_style"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/setting_unlock_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#958c8c"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider2" />

        <TextView
            android:id="@+id/setting_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lock_wallpaper"
            android:textColor="#5f4c4c"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/setting_divider2" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on"
                android:textColor="#5f4c4c"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/setting_swicth"
                style="@style/custom_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>